2014-12-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adjust header guards to resolve issue [#2244].

	* include/_mingw.h (_POSIX_C_SOURCE): Define it implicitly...
	[_GNU_SOURCE || _BSD_SOURCE || _POSIX_SOURCE || !__STRICT_ANSI__]:
	...when any of these prevail, or as appropriate to correspond with...
	[_XOPEN_SOURCE]: ...this; set conformance level accordingly.

	* include/math.h [_POSIX_C_SOURCE || defined _USE_MATH_DEFINES]
	(M_E, M_LOG2E, M_LOG10E, M_LN2, M_LN10, M_PI, M_PI_2, M_PI_4, M_1_PI)
	(M_2_PI, M_2_SQRTPI, M_SQRT2, M_SQRT1_2): Define them, irrespective...
	[__STRICT_ANSI__]: ...of this; replace guard accordingly.

2014-12-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add implementation of mkstemp() and mkdtemp() functions.

	* mingwex/cryptnam.c: New file; it implements...
	(__mingw_crypto_tmpname): ...this helper function; it generates a
	cryptographically secure sequence of characters, used as the random
	component in temporary file and directory names.

	* mingwex/mkstemp.c: New file; it implements...
	(__mingw_mkstemp): ...this provider of mkstemp() functionality.

	* mingwex/mkdtemp.c: New file; it implements...
	(__mingw_mkdtemp): ...this provider of mkdtemp() functionality.

	* include/stdlib.h (mkstemp): Declare protototye; provide an inline
	function implementation, with LIBIMPL extern semantics, in terms of...
	(__mingw_mkstemp): ...this; also declare prototype, and define...
	(_MKSTEMP_INVOKE, _MKSTEMP_DEFAULT): ...these supporting constants.
	(_MKSTEMP_SETMODE): New macro; define it, also providing...
	(MKSTEMP_SETMODE) [!_NO_OLDNAMES]: ...this alias.
	(mkdtemp): Declare prototype; provide inline implementation, with
	JMPSTUB extern semantics, in terms of...
	(__mingw_mkdtemp): ...this; declare prototype.

	* Makefile.in (libmingwex.a): Add dependency rule, to include...
	(mkstemp.$OBJEXT, mkdtemp.$OBJEXT, cryptname.$OBJEXT): ...these.

2014-11-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
